# SNOM_PL_explorer

./: .gitignore  AGENTS.md  CLAUDE.md  PL_Explorer.icns  README.md  __init__.py  app.py  app_model.py  decomposition.py  launch_macos.sh  pyproject.toml  pytest.ini  requirements.txt  snom_pipeline.py  state.py  test_app_model.py  test_decomposition.py  test_launcher.py  test_qt_app.py  test_snom_pipeline.py  test_state.py
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-30-github-publishing.md
docs/superpowers/specs/: 2026-06-30-github-publishing-design.md
gui/: __init__.py  main_window.py  plotting.py  tabs.py  theme.py  workers.py
